# screw-theory-solvers

./: CMakeLists.txt  CONTRIBUTING.md  ConfigurationSelector_8hpp_source.html  MatrixExponential_8hpp_source.html  ProductOfExponentials_8hpp_source.html  README.md  ScrewTheoryIkProblem_8hpp_source.html  ScrewTheoryIkSubproblems_8hpp_source.html  ScrewTheoryTools_8hpp_source.html  annotated.html  citelist.html  classes.html  classroboticslab_1_1Algebraic__UR-members.html  classroboticslab_1_1Algebraic__UR.html  classroboticslab_1_1ConfigurationSelector-members.html  classroboticslab_1_1ConfigurationSelector.html  classroboticslab_1_1ConfigurationSelectorFactory-members.html  classroboticslab_1_1ConfigurationSelectorFactory.html  classroboticslab_1_1ConfigurationSelectorHumanoidGait-members.html  classroboticslab_1_1ConfigurationSelectorHumanoidGait.html  classroboticslab_1_1ConfigurationSelectorHumanoidGaitFactory-members.html  classroboticslab_1_1ConfigurationSelectorHumanoidGaitFactory.html  classroboticslab_1_1ConfigurationSelectorLeastOverallAngularDisplacement-members.html  classroboticslab_1_1ConfigurationSelectorLeastOverallAngularDisplacement.html  classroboticslab_1_1ConfigurationSelectorLeastOverallAngularDisplacementFactory-members.html  classroboticslab_1_1ConfigurationSelectorLeastOverallAngularDisplacementFactory.html  classroboticslab_1_1ConfigurationSelector_1_1Configuration-members.html  classroboticslab_1_1ConfigurationSelector_1_1Configuration.html  classroboticslab_1_1MatrixExponential-members.html  classroboticslab_1_1MatrixExponential.html  classroboticslab_1_1PadenKahanOne-members.html  classroboticslab_1_1PadenKahanOne.html  classroboticslab_1_1PadenKahanThree-members.html  classroboticslab_1_1PadenKahanThree.html  classroboticslab_1_1PadenKahanTwo-members.html  classroboticslab_1_1PadenKahanTwo.html  classroboticslab_1_1PardosGotorEight-members.html  classroboticslab_1_1PardosGotorEight.html  classroboticslab_1_1PardosGotorFive-members.html  classroboticslab_1_1PardosGotorFive.html  (+53 more)
.github/workflows/: ci.yml  doxygen.yml
bindings/: CMakeLists.txt
bindings/PySTS/: PySTS.cpp  PySTS.h  solvers.cpp
cmake/: config.cmake.in
doc/: CMakeLists.txt  groups.dox
libraries/: CMakeLists.txt
libraries/ScrewTheoryLib/: CMakeLists.txt  PadenKahanSubproblems.cpp  ProductOfExponentials.cpp  ScrewTheoryIkProblem.hpp  ScrewTheoryIkProblemBuilder.cpp  ScrewTheoryIkSubproblems.hpp  ScrewTheoryTools.hpp
libraries/ScrewTheorySolvers/: CMakeLists.txt  ConfigurationSelector.hpp  MatrixExponential.cpp  MatrixExponential.hpp  PardosGotorSubproblems.cpp  ProductOfExponentials.cpp  ProductOfExponentials.hpp  ScrewTheoryIkProblem.cpp  ScrewTheoryIkProblem.hpp  ScrewTheoryIkProblemBuilder.cpp  ScrewTheoryIkSubproblems.hpp  ScrewTheoryTools.cpp  ScrewTheoryTools.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  (+4 more)
tests/: CMakeLists.txt  testScrewTheory.cpp  testScrewTheorySolvers.cpp
